force-app/main/default/objects/KDCE_Coupon__c/KDCE_Coupon__c.object-meta.xml
<CustomObject>
    <description>[Local KDCE]</description>
    <label>Coupon</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>