force-app/main/default/objects/KDCE_Coupon__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>[KDCE] Coupon Price</description>
    <label>Coupon Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>