force-app/main/default/objects/KDCE_Coupon__c/fields/ChannelDetails__c.field-meta.xml
<CustomField>
    <fullName>ChannelDetails__c</fullName>
    <description>[KDCE] CVS Channel</description>
    <label>CVS Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CU</fullName>
                <label>CU 편의점</label>
            </value>
            <value>
                <fullName>GS</fullName>
                <label>GS25 편의점</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>미니스톱 편의점</label>
            </value>
            <value>
                <fullName>K7</fullName>
                <label>세븐일레븐 편의점</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>씨스페이스 편의점</label>
            </value>
            <value>
                <fullName>EM</fullName>
                <label>이마트24(위드미) 편의점</label>
            </value>
            <value>
                <fullName>SS</fullName>
                <label>일반 소매점</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>