force-app/main/default/objects/KDCE_Coupon__c/fields/ConsumerId__c.field-meta.xml
<CustomField>
    <fullName>ConsumerId__c</fullName>
    <label>Consumer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>