force-app/main/default/objects/KDCE_Coupon__c/fields/CouponCode__c.field-meta.xml
<CustomField>
    <fullName>CouponCode__c</fullName>
    <description>[KDCE] Coupon Code</description>
    <externalId>true</externalId>
    <label>Coupon Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>