force-app/main/default/objects/KDCE_Coupon__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>[KDCE] Coupon Expiry Date</description>
    <label>Coupon Expiry Date</label>
    <type>Date</type>
</CustomField>