force-app/main/default/objects/KDCE_Coupon__c/fields/ExternalType__c.field-meta.xml
<CustomField>
    <fullName>ExternalType__c</fullName>
    <description>데이터가 너무 많아 쿼리를 하기 위한 External Field (MGM 발급에서 사용)</description>
    <externalId>true</externalId>
    <label>ExternalType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>