force-app/main/default/objects/KDCE_Coupon__c/fields/fm_ContactExtId__c.field-meta.xml
<CustomField>
    <fullName>fm_ContactExtId__c</fullName>
    <formula>Contact__r.KDCE_ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer ID (FM)</label>
    <type>Text</type>
</CustomField>