force-app/main/default/objects/KDCE_Coupon__c/fields/fm_ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>fm_ContactPhone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>