force-app/main/default/objects/KDCE_Coupon__c/fields/fm_CountCheck__c.field-meta.xml
<CustomField>
    <fullName>fm_CountCheck__c</fullName>
    <formula>Contact__r.KDCE_MGMUseCount__c = fm_UseCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Check</label>
    <type>Checkbox</type>
</CustomField>