force-app/main/default/objects/KDCE_Coupon__c/fields/fm_UseCount__c.field-meta.xml
<CustomField>
    <fullName>fm_UseCount__c</fullName>
    <formula>ru_UseCount__c - ru_CancelCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Use Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>