force-app/main/default/objects/KDCE_Coupon__c/fields/Idx__c.field-meta.xml
<CustomField>
    <fullName>Idx__c</fullName>
    <description>[KDCE] Coupon Index</description>
    <label>Coupon Idx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>