force-app/main/default/objects/KDCE_Coupon__c/fields/IsAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsAvailable__c</fullName>
    <formula>OR(
	AND(RecordType.DeveloperName = &apos;Coupon_Paper&apos;, 
		NOT(ISPICKVAL(Status__c, &apos;Use&apos;))
	),
	AND(RecordType.DeveloperName = &apos;Coupon_Tradein&apos;, 
		NOT(ISPICKVAL(Status__c, &apos;Use&apos;))
	),
	AND(RecordType.DeveloperName = &apos;Coupon_MGM&apos;, 
		NOT(ISPICKVAL(Status__c, &apos;Produce&apos;)), 
		ru_UseCount__c &lt; 10
	),
	AND(ISPICKVAL(Status__c, &apos;Issue&apos;),
		fm_UseCount__c = 0
	), 
	AND(RecordType.DeveloperName = &apos;Coupon_Accessory&apos;, 
		fm_UseCount__c = 0
	),
	AND(RecordType.DeveloperName = &apos;Coupon_Hotel&apos;, 
		fm_UseCount__c &lt; 2
	)
)</formula>
    <label>Available YN</label>
    <type>Checkbox</type>
</CustomField>