force-app/main/default/objects/KDCE_Coupon__c/fields/IsSend__c.field-meta.xml
<CustomField>
    <fullName>IsSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Coupon 발송 여부</description>
    <label>SMS Send YN</label>
    <type>Checkbox</type>
</CustomField>