force-app/main/default/objects/KDCE_Coupon__c/fields/IssuableDate__c.field-meta.xml
<CustomField>
    <fullName>IssuableDate__c</fullName>
    <label>Coupon Issuable Date</label>
    <type>Date</type>
</CustomField>