force-app/main/default/objects/KDCE_Coupon__c/fields/IssueChannel__c.field-meta.xml
<CustomField>
    <fullName>IssueChannel__c</fullName>
    <label>Issue Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>