force-app/main/default/objects/KDCE_Coupon__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>[KDCE] Coupon Issue Date</description>
    <label>Issue Date</label>
    <type>DateTime</type>
</CustomField>