force-app/main/default/objects/KDCE_Coupon__c/fields/Logic_Check_Test__c.field-meta.xml
<CustomField>
    <fullName>Logic_Check_Test__c</fullName>
    <formula>Contact__r.KDCE_MGMCode__c  = Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logic Check Test</label>
    <type>Checkbox</type>
</CustomField>