force-app/main/default/objects/KDCE_Coupon__c/fields/ru_CancelCount__c.field-meta.xml
<CustomField>
    <fullName>ru_CancelCount__c</fullName>
    <label>Coupon Cancel Count (RU)</label>
    <summaryFilterItems>
        <field>KDCE_CouponHistory__c.ActionType__c</field>
        <operation>equals</operation>
        <value>Cancel</value>
    </summaryFilterItems>
    <summaryForeignKey>KDCE_CouponHistory__c.Coupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>