force-app/main/default/objects/KDCE_Coupon__c/fields/ru_GifticonReceivedHistoryCount__c.field-meta.xml
<CustomField>
    <fullName>ru_GifticonReceivedHistoryCount__c</fullName>
    <description>[KDCE] A count of coupon history which gifticon advantage is actually applied</description>
    <inlineHelpText>A count of coupon history which gifticon advantage is actually applied</inlineHelpText>
    <label>Gifticon Received History Count</label>
    <summaryFilterItems>
        <field>KDCE_CouponHistory__c.Gifticon__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>KDCE_CouponHistory__c.ActionType__c</field>
        <operation>equals</operation>
        <value>Use</value>
    </summaryFilterItems>
    <summaryForeignKey>KDCE_CouponHistory__c.Coupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>