force-app/main/default/objects/KDCE_Coupon__c/fields/ru_UseCount__c.field-meta.xml
<CustomField>
    <fullName>ru_UseCount__c</fullName>
    <description>[KDCE] Coupon 사용횟수</description>
    <label>Coupon Use Count (RU)</label>
    <summaryFilterItems>
        <field>KDCE_CouponHistory__c.ActionType__c</field>
        <operation>equals</operation>
        <value>Use</value>
    </summaryFilterItems>
    <summaryForeignKey>KDCE_CouponHistory__c.Coupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>