force-app/main/default/objects/KDCE_Coupon__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Produce&apos;</defaultValue>
    <description>[KDCE] Coupon Status</description>
    <label>Coupon Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Produce</fullName>
                <default>true</default>
                <label>Produce</label>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>