force-app/main/default/objects/KDCE_Coupon__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>[KDCE] Coupon Type</description>
    <label>Coupon Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MGM</fullName>
            </value>
            <value>
                <fullName>CVS</fullName>
                <label>Special Purchase Code</label>
            </value>
            <value>
                <fullName>GetInfo</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Tradein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>