force-app/main/default/objects/KDCE_Coupon__c/fields/UsedDate__c.field-meta.xml
<CustomField>
    <fullName>UsedDate__c</fullName>
    <label>CVS Used Date</label>
    <type>DateTime</type>
</CustomField>