force-app/main/default/objects/KDCE_Coupon__c/recordTypes/Coupon_CVS.recordType-meta.xml
<RecordType>
    <fullName>Coupon_CVS</fullName>
    <active>true</active>
    <description>[KDCE] KA, GT</description>
    <label>Special Purchase Code</label>
</RecordType>