force-app/main/default/objects/KDCE_Coupon__c/recordTypes/Coupon_CVS_Trade_In.recordType-meta.xml
<RecordType>
    <fullName>Coupon_CVS_Trade_In</fullName>
    <active>false</active>
    <label>CVS trade in Purchase coupon</label>
</RecordType>