force-app/main/default/objects/KDCE_Coupon__c/recordTypes/Coupon_GetInfo.recordType-meta.xml
<RecordType>
    <fullName>Coupon_GetInfo</fullName>
    <active>true</active>
    <description>[KDCE] GetInfo</description>
    <label>GetInfo</label>
</RecordType>