force-app/main/default/objects/KDCE_Coupon__c/recordTypes/Coupon_Hotel.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Hotel</fullName>
    <active>true</active>
    <description>[KDCE] Hotel</description>
    <label>Hotel</label>
</RecordType>