force-app/main/default/objects/KDCE_Coupon__c/recordTypes/Coupon_MGM.recordType-meta.xml
<RecordType>
    <fullName>Coupon_MGM</fullName>
    <active>true</active>
    <description>[KDCE] MGM</description>
    <label>MGM</label>
</RecordType>