force-app/main/default/objects/KDCE_Coupon__c/recordTypes/Coupon_Paper.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Paper</fullName>
    <active>true</active>
    <description>[KDCE] Paper</description>
    <label>Paper</label>
</RecordType>