force-app/main/default/objects/KDCE_Coupon__c/recordTypes/Coupon_Tradein.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Tradein</fullName>
    <active>true</active>
    <description>[KDCE] Trade-In</description>
    <label>Tradein</label>
</RecordType>