force-app/main/default/objects/KDCE_Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CouponCode__c</columns>
    <columns>Idx__c</columns>
    <columns>IssueDate__c</columns>
    <columns>ChannelDetails__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UsedDate__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>MGM</value>
    </filters>
    <label>All</label>
</ListView>