force-app/main/default/objects/KDCE_Coupon__c/listViews/CVSAll.listView-meta.xml
<ListView>
    <fullName>CVSAll</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>CouponCode__c</columns>
    <columns>Status__c</columns>
    <columns>IssueDate__c</columns>
    <columns>ChannelDetails__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>CVS</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Use</value>
    </filters>
    <label>CVS All</label>
</ListView>