force-app/main/default/objects/KDCE_Coupon__c/listViews/HotelCoupon.listView-meta.xml
<ListView>
    <fullName>HotelCoupon</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>CouponCode__c</columns>
    <columns>Status__c</columns>
    <columns>IsAvailable__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Hotel</value>
    </filters>
    <label>Hotel Coupon</label>
</ListView>